--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,16 @@
 ###设置###
-log4j.rootLogger=info,stdout
+log4j.rootLogger=info,stdout,logfile
+log4j.logger.com=debug
 
 ###输出信息到控制抬###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%t:%r]-[%p] %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p] %c:%L - %m%n
+
+log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.logfile.Append=true
+log4j.appender.logfile.File=logs/img-crw.log
+log4j.appender.logfile.DatePattern='.'yyyy-MM-dd'.log'
+log4j.appender.logfile.layout = org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%p] %c:%L - %m%n
