--- a/src/main/resources/druid.properties
+++ b/src/main/resources/druid.properties
@@ -1,7 +1,7 @@
 driverClassName=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://192.168.90.183:3306/test?characterEncoding=utf-8
+url=jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf-8
 username=root
-password=root2017
+password=root
 initialSize=5
 maxActive=10
 maxWait=3000
