--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,1 +1,3 @@
 http.head.user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.141 Safari/537.36
+
+rubbish.attentionNumMax=1000
