--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,25 @@
 http.head.user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.141 Safari/537.36
 
 rubbish.attentionNumMax=1000
+
+cookies.path=D:\\project\\img-craw\\src\\main\\resources\\
+img.down.path=D:\\project\\img-craw\\img_down\\
+
+proxy.get.url=http://ec2-18-163-35-227.ap-east-1.compute.amazonaws.com:8901/get/
+proxy.del.url=http://ec2-18-163-35-227.ap-east-1.compute.amazonaws.com:8901/delete?proxy=
+
+driverClassName=com.mysql.cj.jdbc.Driver
+url=jdbc:mysql://127.0.0.1:3306/test?characterEncoding=utf-8
+username=root
+password=root
+initialSize=5
+maxActive=10
+maxWait=3000
+
+task.sleep.blibli=3000
+task.sleep.blibli.fansNumTask=3000
+
+blibli.userid.start=27105185
+blibli.userid.add=800000
+
+task.main.start.userId=1005052709577332|Pl_Official_HisRelation__59
