--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 ###设置###
 log4j.rootLogger=info,stdout,logfile
-log4j.logger.com.craw.task=debug
+log4j.logger.com.craw.task.blibli=debug
 
 ###输出信息到控制抬###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
